# pyqt-colorpicker

./: LICENSE  README.md  colorpicker.py  example.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  release_test.yml
colorpicker/: __init__.py  colorpicker.py  ui_dark.py  ui_dark.ui  ui_dark_alpha.py  ui_dark_alpha.ui  ui_light.py  ui_light.ui  ui_light_alpha.py  ui_light_alpha.ui
colorpicker/ui/: img.py  img.qrc  ui_dark.py  ui_dark.ui  ui_dark_alpha.py  ui_dark_alpha.ui  ui_light.py  ui_light.ui  ui_light_alpha.py
ui/: colorpicker.py  colorpicker.ui  colorpicker_light.py  colorpicker_light.ui
vcolorpicker/: __init__.py  __main__.py  img.py  ui_dark.py  ui_dark_alpha.py  ui_light.py  ui_light_alpha.py  vcolorpicker.py
vcolorpicker/ui/: ui_light_alpha.ui
