[project]
name = "vcolorpicker"
version = "1.4.2"
authors = [{name = "nlfmt", email = "nlfmt@gmx.de"}]
description = 'Open a visual vcolorpicker from any project.'
readme="README.md"

requires-python = ">=3.7"
dependencies = ["pyqt5"]

classifiers = ["License :: OSI Approved :: MIT License"]
keywords = ["python", "color", "gui", "colorpicker", "visual"]


[project.urls]
source = 'https://github.com/nlfmt/pyqt-colorpicker'


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"