[metadata]
name = vcolorpicker
version = attr: vcolorpicker.__version__
description = Open a visual vcolorpicker from any project.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nlfmt/pyqt-colorpicker
author = nlfmt
author_email = nlfmt@gmx.de
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: MacOS X
    Environment :: Win32 (MS Windows)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
keywords = python color gui colorpicker visual qt
project_urls =
    GitHub = https://github.com/nlfmt/pyqt-colorpicker
    Bug Tracker = https://github.com/nlfmt/pyqt-colorpicker/issues

[options]
packages = find:
install_requires =
    qtpy
python_requires = >=3.7
include_package_data = True
zip_safe = False
